# Operit

./: .gitmodules  packages_whitelist.txt  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: MONACO_SETUP.md  monaco_editor.html  uiautoserver.apk
app/src/main/java/com/ai/assistance/operit/core/chat/: AIMessageManager.kt
app/src/main/java/com/ai/assistance/operit/core/tools/: AgentInstrumentation.kt  UiAutomatorBridge.kt
app/src/main/java/com/ai/assistance/operit/integrations/http/: ExternalChatHttpServer.kt
app/src/main/java/com/ai/assistance/operit/plugins/toolpkg/: ToolPkgCommonBridgePlugin.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
docs/: DEFAULT_TOOLS_ARCH.md  SCRIPT_DEV_GUIDE.md  TOOLPKG_FORMAT_GUIDE.md  external_http_chat.md
docs/package_dev/: core.md  toolpkg.md
examples/: java_bridge.js  java_bridge.ts
examples/apktool/: manifest.json  tsconfig.json
examples/apktool/resources/apktool/: README.md
examples/apktool/src/: main.ts
examples/deepsearching/src/planning/: plan-mode-manager.ts
examples/deepsearching/src/plugin/: deep-search-plugin.ts
examples/types/: compose-dsl.d.ts  core.d.ts  index.d.ts  java-bridge.d.ts  toolpkg.d.ts
examples/windows_control/src/ui/windows_setup/: index.ui.ts
quickjs/: README.md  build.gradle.kts
quickjs/src/main/: AndroidManifest.xml
quickjs/src/main/cpp/: CMakeLists.txt  quickjs_jni.cpp
tools/: execute_js.sh
(+62 files in other folders)
